# claude-skills

./: .gitignore  CLAUDE.md  CLAUDE_CODE_PROMPTS.md  GAPS.md  LICENSE  Makefile  README.md  RECONCILE.md  pyproject.toml
.github/workflows/: ci.yml
eval/: README.md
shared/: README.md
skills/: rule-registry.md  rule-registry.yaml
skills/arch-design-doc-obsidian/: README.md
skills/deep-primer/: SKILL.md
skills/deep-primer/assets/: card-template.html  llm_md_template.md  primer-template.html
skills/deep-primer/references/: artifact-schemas.md  discovery-brief-templates.md  evidence-map.md  exemplars.md  research-perspectives.md  rule-registry.md  rule-registry.yaml
skills/deep-primer/references/critic-prompts/: coherence.md  evidence-grounding.md  expertise-calibration.md  figures.md  structure-architecture.md  structure-fieldguide.md
skills/deep-primer/references/eval/: README.md  eval-rubric.yaml
skills/deep-primer/scripts/: eval.py  lint.py  probe_env.py
skills/deep-primer/scripts/checks/: _base.py  coherence_givennew.py  convergence.py  discovery.py  footnote.py  ledger.py  multiview_concepts.py  prose_caps.py  provenance.py  recency_versions.py  structure_coverage.py  univocity_terms.py  xrefs.py
skills/deep-primer/scripts/critics/: run_critics.py
skills/deep-primer/tests/: conftest.py  test_checks.py  test_contested.py  test_critics.py  test_ir.py  test_lint.py  test_render.py  test_verify.py
skills/deep-primer/tools/: build.sh  gen_critic_prompts.py  gen_registry_md.py
skills/skill-creator/: README.md
tools/: bundle.py  validate_skill.py
(+26 files in other folders)
